Fixed app language selection, added some russian and ukrainian strings

--- a/Resources/LocalizedTimeAgo.bundle/ru.lproj/LocalizedTimeAgo.strings
+++ b/Resources/LocalizedTimeAgo.bundle/ru.lproj/LocalizedTimeAgo.strings
@@ -107,6 +107,15 @@
 "1 day ago" = "1 день назад";
 
 /* No comment provided by engineer. */
+"1 hour ago" = "1 час назад";
+
+/* No comment provided by engineer. */
+"1 minute ago" = "1 минуту назад";
+
+/* No comment provided by engineer. */
+"1 second ago" = "1 секунду назад";
+
+/* No comment provided by engineer. */
 "This morning" = "Этим утром";
 
 /* No comment provided by engineer. */
